--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Chihuahua</h4>
+              <h4 class="my-0 fw-normal">Cupcake</h4>
             </div>
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$0/mo<small class="text-body-secondary fw-light">/mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>5 Matches Per Day</li>
-                <li>10 Messages Per Day</li>
-                <li>Unlimited App Usage</li>
+                <li>5 Pegs Per Day</li>
+                <li>10 Sniffs Per Day</li>
+                <li>Unlimited Sniff Carousel</li>
               </ul>
               <button type="button" class="w-100 btn btn-lg btn-outline-dark">Sign up for free</button>
             </div>
@@ -155,7 +155,7 @@
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Labrador</h4>
+              <h4 class="my-0 fw-normal">Blueberry</h4>
             </div>
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$15/mo<small class="text-body-secondary fw-light">/mo</small></h1>
@@ -171,13 +171,13 @@
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm border-dark">
             <div class="card-header py-3 text-bg-dark border-dark">
-              <h4 class="my-0 fw-normal">Mastiff</h4>
+              <h4 class="my-0 fw-normal">Purple</h4>
             </div>
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$29/mo<small class="text-body-secondary fw-light">/mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Priority Listing</li>
-                <li>Unlimited Matches & Messages</li>
+                <li>Unlimited Pegs & Sniffs</li>
                 <li>Unlimited App Usage</li>
               </ul>
               <button type="button" class="w-100 btn btn-lg btn-dark">Contact us</button>
